--- a/README
+++ b/README
@@ -1,11 +1,18 @@
+Mac OSX Instructions (make sure you have the latest XCode)
+
 install brew
 brew install ghostscript
 brew install imagemagick
 install RVM
 install bundler
 
+rvm install 1.9.3
+
+then cd into DreamScreen and rvm should handle the rest
 
 Issues:
-  If you get segmentation fault errors from imagemagick/rmagick, 
+  -If you get extension build errors when installing rmagick or
+  -If you get segmentation fault errors from imagemagick/rmagick 
+    
     try removing imagemagick: brew remove imagemagick
-    and reinstall withou openmp: brew install -f imagemagick --disable-openmp
+    and reinstall without openmp: brew install -f imagemagick --disable-openmp
